Update conection string for simple DB name

--- a/src/GigHub/appsettings.json
+++ b/src/GigHub/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GigHub-14bcdeb5-896d-4fb5-ad3a-56876c2fa5af;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GigHub;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
