--- a/src/GigHub/project.json
+++ b/src/GigHub/project.json
@@ -44,7 +44,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "BundlerMinifier.Core": "2.1.258"
+    "BundlerMinifier.Core": "2.1.258",
+    "AutoMapper.Data": "1.0.0-beta1"
   },
 
   "tools": {
